--- a/_pages/test.html
+++ b/_pages/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Research
+    <title> Research </title>
     </head>
     <body>
       <p> Checking </p>
