--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ layout: default
 
 {% include hero-section.html %}
  {% include education-section.html %}
+{% include portfolio-section.html %}
 {% include about-section.html %}
