Update and rename research.html to portfolio.html

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Research
+title: portfolio
 ---
-<!-- Research -->
+<!-- portfolio -->
 <section class="section">
   <div class="container">
     <div class="row mb-5">
@@ -35,4 +35,4 @@ title: Research
     </div>
   </div>
 </section>
-<!-- /Research -->
+<!-- /portfolio -->
