--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 {% include hero-section.html %}
- {% include education-section.html %}
-{% include portfolio-section.html %}
+{% include education-section.html %}
+{% include work-process-section.html %}
 {% include about-section.html %}
