--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include hero-section.html %}
-{% include education-section.html %}
 {% include work-process-section.html %}
+{% include experience-section.html %}
+{% include education-section.html %}
 {% include about-section.html %}
