--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: research
 title: Research
 ---
 <!-- portfolio -->
@@ -7,32 +7,38 @@ title: Research
   <div class="container">
     <div class="row mb-5">
       <div class="col-12">
-        <div class="btn-group btn-group-toggle justify-content-center d-flex" data-toggle="buttons">
+        <!-- <div class="btn-group btn-group-toggle justify-content-center d-flex" data-toggle="buttons">
           <label class="btn btn-sm btn-primary active">
             <input type="radio" name="shuffle-filter" value="all" checked="checked" />All
-          </label>
+          </label> -->
+          <h3>Working Projects:</h3>
           {% for label in site.data.settings.portfolio-label %}
-          <label class="btn btn-sm btn-primary">
+          <!-- <label class="btn btn-sm btn-primary">
             <input type="radio" name="shuffle-filter" value="{{ label.type }}" />{{ label.title }}
-          </label>
+          </label> -->
+          <h4>{{ label.title}}</h4>
+          <p> Abstract - {{ label.content}}</p>
           {% endfor %}
         </div>
-      </div>
+        </div>
+        </div>
+        </section>
+      <!-- </div>
     </div>
     <div class="row shuffle-wrapper">
       {% for item in site.data.settings.portfolio-items %}
       <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[{% for portfolio in item.portfolio-type %}{% if forloop.first == true %}{% else %},{% endif %}&quot;{{ portfolio.type }}&quot;{% endfor %}]">
         <div class="position-relative rounded hover-wrapper">
           <!-- <img src="{{ site.baseurl }}/{{ item.image }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block"> -->
-          <div class="hover-overlay">
+          <!-- <div class="hover-overlay">
             <div class="hover-content">
               <a class="btn btn-light btn-sm" href="{{ item.url }}">view project</a>
             </div>
           </div>
         </div>
-      </div>
-      {% endfor %}
+      </div> -->
+      <!-- {% endfor %}
     </div>
-  </div>
-</section>
+  </div> -->
+
 <!-- /portfolio -->
